[package]
name = "fft-wasm-lib"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/delta_kimigatame/fft-wasm-lib"
homepage = "https://github.com/delta_kimigatame/fft-wasm-lib"
keywords = ["fft", "wasm", "audio", "frequency"]
categories = ["wasm", "audio", "signal-processing"]

[dependencies]
wasm-bindgen = "0.2"
num-complex = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[features]
# デフォルトはスカラ実装（basic）
default = ["basic"]
# スカラ版 FFT 実装
basic = []
# SIMD 最適化版 FFT 実装
simd = []

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3     # サイズ優先なら "z"、速度優先なら "3"
lto = true        # リンカ最適化を有効に
codegen-units = 1 # コード分割を最小にして最適化効果を高める
panic = "abort"   # パニック時のコードサイズを削減

[[bench]]
name = "spectrogram_bench"
path = "benches/spectrogram_bench.rs"
harness = false

[[bench]]
name = "fft_power_bench"
path = "benches/fft_power_bench.rs"